--- a/style11.css
+++ b/style11.css
@@ -1,5 +1,4 @@
-*
-*{
+* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,35 +6,36 @@
   list-style-type: none;
   text-decoration: none;
 }
+
 header {
-    position: fixed;
-    top:0;
-    left: 0;
-    right: 0;
-     z-index: 3;
-    background: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 8%;
-    box-shadow: 0 5px 10px #4d4343;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8%;
+  box-shadow: 0 5px 10px #4d4343;
 }
 
 header .logo {
 
-    transition: 0.5s;
+  transition: 0.5s;
 
 }
 
 header .logo:hover {
   transform: scale(1.2);
-  
+
 }
 
 header nav ul li {
   position: relative;
   float: left;
-   z-index: 3;
+  z-index: 3;
 }
 
 header nav ul li a {
@@ -61,39 +61,49 @@ nav ul li ul {
 
 }
 
-nav ul li:hover > ul {
+nav ul li:hover>ul {
   display: initial;
 
 }
 
 .contacts {
-	font-size: 25px;
-padding-top: 100px;
+  font-size: 25px;
+  padding-top: 100px;
 
-	font-weight: 700;
+  font-weight: 700;
   font-family: 'Marmelad', sans-serif;
   text-align: center;
 }
+
 .zakaz {
-	padding-bottom: 100px;
-	font-size: 40px;
-color: #5A3313;
-	font-weight: 700;
+  padding-bottom: 100px;
+  font-size: 40px;
+  color: #5A3313;
+  font-weight: 700;
   font-family: 'Marmelad', sans-serif;
   text-align: center;
 }
 
 .number {
-	width: 800px;
+  width: 800px;
 
-	font-size: 30px;
-color: #5A3313;
-	font-weight: 700;
+  font-size: 30px;
+  color: #5A3313;
+  font-weight: 700;
   font-family: 'Marmelad', sans-serif;
   text-align: center;
-	display: flex;
-	justify-content: space-between;
-margin-left: auto;
-margin-right: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
 
+}
+
+a:active,
+/* активная/посещенная ссылка */
+a:hover,
+/* при наведении */
+a {
+  text-decoration: none;
+  color: #5a3313;
 }
